--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,12 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "barryvdh/laravel-debugbar": "3.2.5",
         "fideloper/proxy": "^4.0",
+        "fzaninotto/faker": "^1.4",
         "laravel-frontend-presets/argon": "^1.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
-        "fzaninotto/faker": "^1.4",
         "spatie/laravel-permission": "^2.37"
     },
     "require-dev": {
