--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,9 @@
         "laravel-frontend-presets/argon": "^1.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
+        "laravelcollective/html": "^5.8.0",
+        "lavary/laravel-menu": "^1.8",
+        "spatie/laravel-medialibrary": "^7.0.0",
         "spatie/laravel-permission": "^2.37"
     },
     "require-dev": {
@@ -22,7 +25,9 @@
         "filp/whoops": "^2.0",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^7.5"
+        "phpunit/phpunit": "^7.5",
+        "barryvdh/laravel-debugbar": "v3.2.5",
+        "barryvdh/laravel-ide-helper": "^2.6"
     },
     "config": {
         "optimize-autoloader": true,
@@ -59,7 +64,9 @@
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
         "post-create-project-cmd": [
-            "@php artisan key:generate --ansi"
+            "@php artisan key:generate --ansi",
+            "php artisan ide-helper:generate",
+            "php artisan ide-helper:meta"
         ]
     }
 }
