--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME='SPCC Caloocan'
+APP_NAME='Shlk collegue'
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -9,8 +9,8 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=spcc
-DB_USERNAME=spcc
+DB_DATABASE=shlk
+DB_USERNAME=shlk
 DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
