--- a/.env.example
+++ b/.env.example
@@ -7,9 +7,9 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=127.0.0.1 || shlk_db for docker
 DB_PORT=3306
-DB_DATABASE=shlk
+DB_DATABASE=shlk_db
 DB_USERNAME=shlk
 DB_PASSWORD=root
 
