add some translation package

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.8.0",
         "lavary/laravel-menu": "^1.8",
+        "mcamara/laravel-localization": "^1.8",
         "spatie/laravel-medialibrary": "^7.0.0",
         "spatie/laravel-permission": "^2.37"
     },
