--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.4",
         "barryvdh/laravel-debugbar": "3.2.5",
+        "facebook/graph-sdk": "^5.7",
         "fideloper/proxy": "^4.0",
         "fzaninotto/faker": "^1.4",
         "laravel-frontend-presets/argon": "^1.0",
