update laravel version

--- a/composer.json
+++ b/composer.json
@@ -8,28 +8,24 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.4",
-        "barryvdh/laravel-debugbar": "3.2.5",
-        "facebook/graph-sdk": "^5.7",
-        "fideloper/proxy": "^4.0",
-        "fzaninotto/faker": "^1.4",
-        "laravel-frontend-presets/argon": "^1.0",
-        "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0",
-        "laravelcollective/html": "^5.8.0",
+        "php": "^8.2",
+        "barryvdh/laravel-debugbar": "^3.9",
+        "fakerphp/faker": "^1.23",
+        "laravel/framework": "^10.0",
+        "laravel/tinker": "^2.8",
+        "laravelcollective/html": "^6.3",
         "lavary/laravel-menu": "^1.8",
         "mcamara/laravel-localization": "^1.8",
-        "spatie/laravel-medialibrary": "^7.0.0",
-        "spatie/laravel-permission": "^2.37"
+        "spatie/laravel-medialibrary": "^10.0",
+        "spatie/laravel-permission": "^5.10"
     },
     "require-dev": {
-        "beyondcode/laravel-dump-server": "^1.0",
-        "filp/whoops": "^2.0",
-        "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^7.5",
-        "barryvdh/laravel-debugbar": "v3.2.5",
-        "barryvdh/laravel-ide-helper": "^2.6"
+        "beyondcode/laravel-dump-server": "^1.9",
+        "filp/whoops": "^2.15",
+        "mockery/mockery": "^1.5",
+        "nunomaduro/collision": "^7.0",
+        "phpunit/phpunit": "^10.5",
+        "barryvdh/laravel-ide-helper": "^2.13"
     },
     "config": {
         "optimize-autoloader": true,
