Оновлення до PHP 8.2 та Laravel 10: виправлення імпорту постів з Facebook
- Оновлено PHP до 8.2 та Laravel до 10.49.1
- Оновлено Docker образ до webdevops/php-nginx:8.2-alpine
- Виправлено Facebook Graph SDK для роботи з PHP 8.2
- Покращено команду імпорту постів з Facebook з детальним логуванням
- Оновлено міграцію media таблиці для Spatie MediaLibrary v10
- Налаштовано автоматичний запуск Laravel scheduler
- Виправлено помилки в коді (null checks, обробка помилок)
- Створено тег 'news' для постів

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^8.2",
         "barryvdh/laravel-debugbar": "^3.9",
+        "facebook/graph-sdk": "^5.7",
         "fakerphp/faker": "^1.23",
         "laravel/framework": "^10.0",
         "laravel/tinker": "^2.8",
