--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "optimize-autoloader": true,
         "preferred-install": "dist",
         "sort-packages": true,
+        "platform-check": false,
         "allow-plugins": {
             "php-http/discovery": true
         }
